<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Ceritakan dan cetak kisah anda disini!</string>
    <string name="title_welcome_page">Selamat datang di Storry-App!</string>
    <string name="title_signup_page">Lengkapi data dirimu ya!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login terlebih dahulu ya!</string>
    <string name="title_login_page">Sudah siap untuk menceritakan kisahmu?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="logout">Keluar</string>
    <string name="welcome_username">Selamat datang %1s</string>
    <string name="welcome_message">Selamat menggunakan aplikasi!</string>
    <string name="preview_image">preview image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="story_image">Story Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_title">Maps</string>
    <string name="author">Author:</string>
    <string name="created_at">Created at:</string>
</resources>