<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryContainer"
                app:titleTextColor="?attr/colorOnPrimaryContainer"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
                app:title="@string/app_name"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_person_24"
            app:shapeAppearanceOverlay="@style/RoundedCornerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:text="@string/welcome_username"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ivProfile"
            app:layout_constraintTop_toTopOf="@id/ivProfile"
            app:layout_constraintBottom_toTopOf="@id/tvWelcomeMessage"
            app:layout_constraintEnd_toStartOf="@id/btnLogout"/>

        <TextView
            android:id="@+id/tvWelcomeMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/welcome_message"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/ivProfile"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting"
            app:layout_constraintBottom_toBottomOf="@id/ivProfile"
            app:layout_constraintEnd_toStartOf="@id/btnLogout"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivProfile"
            app:layout_constraintBottom_toBottomOf="@id/ivProfile"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_view_story"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvWelcomeMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>